--- a/styles/main.css
+++ b/styles/main.css
@@ -1,18 +1,12 @@
-.criminalsContainer {
+@import "./criminal.css";
+@import "./officer.css";
+
+.container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
 }
 
-.criminal__card {
-  border: 3px solid black;
-  background-color: goldenrod;
-  flex-basis: 24%;
-  margin: 5px;
-  padding: 5px;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.criminal__card:hover {
-  background-color: skyblue;
+h1 {
+  display: flex;
+  font-family: serif;
+  align-self: center;
 }
