--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,16 @@
 @import "./criminal.css";
 @import "./officer.css";
 
-h1 {
+* {
+  box-sizing: border-box;
+}
+
+h2 {
   font-family: serif;
+}
+
+article {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
