--- a/styles/criminal.css
+++ b/styles/criminal.css
@@ -1,4 +1,4 @@
-.criminal__card {
+.card {
   border: 3px solid black;
   background-color: goldenrod;
   flex-basis: 24%;
@@ -7,7 +7,7 @@
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.criminal__card:hover {
+.card:hover {
   background-color: skyblue;
 }
 
